...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:contentDescription="App logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>


        <Button
            android:id="@+id/loginbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="Login"
            android:backgroundTint="@android:color/holo_purple"
            android:textColor="@android:color/white"
...
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundMode="outline" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailaddresslogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Enter Email Address"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>
...
            app:boxStrokeColor="@android:color/black"
            app:hintTextColor="@android:color/black"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundMode="outline" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/white"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Sign Up"
            android:backgroundTint="@android:color/holo_purple"
            android:textColor="@android:color/white"
            android:padding="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginbutton" />

        <Button
            android:id="@+id/forgetPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Forget Password?"
            android:backgroundTint="@android:color/transparent"
            android:textColor="@android:color/holo_purple"
...
